--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= heroku-resque-auto-scale
+# heroku-resque-auto-scale
 
 Auto scale your resque workers on Heroku. Original code by darkhelmet:
 
@@ -9,13 +9,14 @@ Modify by joel => https://github.com/joel
 
 On fork => https://github.com/joel/heroku-resque-auto-scale
 
-Principals changes :
+### Principals changes :
 
 * I've switched Jeweler Gem generator to simpel Bundler gem generator
 * I've switched to Rspec from TestUnit
 * I've switched to HerokuAPI Gem instead of Heroku Client Gem
+* Add safe mode for heroku
 
-Configuration :
+### Configuration :
 
 You need to defined two vars for your heroku :
 
@@ -24,26 +25,32 @@ heroku config:add HEROKU_API_KEY=your_api_key -a your_app_name
 heroku config:add HEROKU_APP_NAME=your_app_name -a your_app_name
 
 You can test when executed this :
-
-HEROKU_API_KEY=your_api_key HEROKU_APP_NAME=your_app_name *** bundle exec *** rake spec
-
+```
+	HEROKU_API_KEY=your_api_key HEROKU_APP_NAME=your_app_name *** bundle exec *** rake spec
+```
 You can changes thresholds and environments of execution into scaler_config.yml or on your project on config/scaler_config.yml
 
 I just bundled it into a gem for easy inclusion into other projects.
 
-= Usage
+#### Usage
 
 Once the gem is installed, simply extend your job class as follows:
+```
+	class ScalingJob
+		extend HerokuResqueAutoScale
 
-  class ScalingJob
-    extend HerokuResqueAutoScale
+		def self.perform
+			# Do something long running
+		end
+	end
+```
+#### Active safe mode
 
-    def self.perform
-      # Do something long running
-    end
-  end
-
-== Contributing to heroku-resque-auto-scale
+When you ask heroku for scale down workers, heroku send SIGTERM and wait 4 secondes then send SIGKILL, but the worker catch signals can be currently work :( It's bad but Heroku not provide API for manage this case today, you can look arround this [official article](https://devcenter.heroku.com/articles/queuing-ruby-resque#job-termination) but in this gem if you defined var ENV['SAFE_MODE'] :
+```
+	heroku config:add SAFE_MODE=true -a your_app_name
+```
+## Contributing to heroku-resque-auto-scale
 
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
